Import of GERHARD/BibTeX-Parser-0.21 from CPAN.
gitpan-cpan-distribution: BibTeX-Parser
gitpan-cpan-version:      0.21
gitpan-cpan-path:         GERHARD/BibTeX-Parser-0.21.tar.gz
gitpan-cpan-author:       GERHARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'A plain perl BibTeX parser'
+abstract: 'A pure perl BibTeX parser'
 author:
   - 'Gerhard Gossen <gerhard.gossen@googlemail.com>'
 build_requires:
@@ -24,4 +24,4 @@ requires:
   Text::Balanced: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.2
+version: 0.21
