Import of GERHARD/BibTeX-Parser-0.3 from CPAN.
gitpan-cpan-distribution: BibTeX-Parser
gitpan-cpan-version:      0.3
gitpan-cpan-path:         GERHARD/BibTeX-Parser-0.3.tar.gz
gitpan-cpan-author:       GERHARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -2,26 +2,16 @@
 abstract: 'A pure perl BibTeX parser'
 author:
   - 'Gerhard Gossen <gerhard.gossen@googlemail.com>'
-build_requires:
-  File::Spec: 0
-  IO::File: 0
-  IO::String: 0
-  Test::More: 0
-distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Dist::Zilla::Plugin::MetaYAML version 1.091940'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: BibTeX-Parser
-no_index:
-  directory:
-    - inc
-    - t
-    - inc
-    - t
 requires:
+  File::Spec: 0
+  IO::File: 0
+  IO::String: 0
+  Test::More: 0
   Text::Balanced: 0
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.21
+version: 0.3
