--- a/META.yml
+++ b/META.yml
@@ -13,5 +13,6 @@ requires:
   IO::File: 0
   IO::String: 0
   Test::More: 0
-  Text::Balanced: 0
-version: 0.3.1
+resources:
+  repository: http://github.com/gerhardgossen/bibtex-parser/tree
+version: 0.3.2
