--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = BibTeX-Parser
-version = 0.3.1
+version = 0.3.2
 author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
 license = Perl_5
 copyright_holder = Gerhard Gossen
@@ -7,12 +7,12 @@ copyright_holder = Gerhard Gossen
 [@Classic]
 
 [Prereq]
-Text::Balanced = 0
 Test::More = 0
 IO::String = 0
 IO::File = 0
 File::Spec = 0
 
 [PruneFiles]
-file = t/08-parse_large.t
 file = t/bibs/java.bib
+
+[Repository]
