--- a/META.yml
+++ b/META.yml
@@ -2,18 +2,21 @@
 abstract: 'A pure perl BibTeX parser'
 author:
   - 'Gerhard Gossen <gerhard.gossen@googlemail.com>'
-generated_by: 'Dist::Zilla version 1.100160'
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101831, CPAN::Meta::Converter version 2.101670'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: BibTeX-Parser
 requires:
-  ExtUtils::MakeMaker: 6.11
   File::Spec: 0
   IO::File: 0
   IO::String: 0
   Test::More: 0
 resources:
-  repository: http://github.com/gerhardgossen/bibtex-parser/tree
-version: 0.4
+  repository: http://github.com/gerhardgossen/bibtex-parser
+version: 0.5
