--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,14 @@
 name    = BibTeX-Parser
-version = 0.4
+version = 0.5
 author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
 license = Perl_5
 copyright_holder = Gerhard Gossen
 
 [@Classic]
+
+[NextRelease]
+
+[PodWeaver]
 
 [Prereq]
 Test::More = 0
@@ -16,4 +20,4 @@ File::Spec = 0
 filenames = t/bibs/java.bib
 
 [Repository]
-
+[@Git]
