--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101831, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.101880, CPAN::Meta::Converter version 2.101670'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +16,8 @@ requires:
   File::Spec: 0
   IO::File: 0
   IO::String: 0
+  LaTeX::ToUnicode: 0.02
   Test::More: 0
 resources:
   repository: http://github.com/gerhardgossen/bibtex-parser
-version: 0.5
+version: 0.6
