--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = BibTeX-Parser
-version = 0.5
+version = 0.6
 author  = Gerhard Gossen <gerhard.gossen@googlemail.com>
 license = Perl_5
 copyright_holder = Gerhard Gossen
@@ -7,6 +7,7 @@ copyright_holder = Gerhard Gossen
 [@Classic]
 
 [NextRelease]
+format = %-7v %{yyyy-MM-dd HH:mm:ss}d
 
 [PodWeaver]
 
@@ -15,6 +16,7 @@ Test::More = 0
 IO::String = 0
 IO::File = 0
 File::Spec = 0
+LaTeX::ToUnicode = 0.02
 
 [PruneFiles]
 filenames = t/bibs/java.bib
