--- a/META.yml
+++ b/META.yml
@@ -5,9 +5,9 @@ author:
 build_requires:
   Test::More: 0.88
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.300009, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,5 +20,5 @@ requires:
   LaTeX::ToUnicode: 0.02
   Test::More: 0
 resources:
-  repository: http://github.com/gerhardgossen/bibtex-parser
-version: 0.63
+  repository: git://github.com/gerhardgossen/bibtex-parser.git
+version: 0.64
